# deeprepo

./: .gitignore  DEVELOPER_WORKFLOW_GUIDE.md  DOCS_SUMMARY.txt  Dockerfile  HUGGINGFACE_ISSUE.md  INSTALLATION.md  MCP_IMPLEMENTATION_PLAN.md  PROJECT_SPEC.MD  PUBLISHING_GUIDE.md  PUBLISHING_QUICKSTART.md  PUBLISHING_SUMMARY.md  README.md  benchmark_topk.py  cleanup.sh  demo_deeprepo.py  docker-compose.yml  examples_simple.py  publish.sh  publish_mcp.sh  pytest.ini  server.json  setup_free_providers.sh  setup_providers.sh
deeprepo_core/: README.md  mcp_server.py  pyproject.toml
deeprepo_core/src/deeprepo/: __init__.py  cli.py  client.py  graph.py  graph_builder.py  ingestion.py  interfaces.py  router.py  ui.py  wiki.py
deeprepo_core/src/deeprepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
deeprepo_core/src/deeprepo/mcp/: README.md  server.py
deeprepo_core/src/deeprepo/providers/: gemini_v.py  ollama_v.py
docs/: class-interaction-design.excalidraw  high-level-design.excalidraw
tests/: README.md  conftest.py  test_storage.py
tests/fixtures/: cart.py
tests/integration/: test_all_providers.py  test_document.py  test_mcp_integration.py
tests/unit/: test_client.py  test_ingestion.py  test_mcp_server.py
web-app/: main.py
