[project]
name = "deeprepo"
version = "0.1.0"
description = "A production-grade Python library for RAG on local codebases"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
huggingface = [
    # requests is already in core dependencies
]
ollama = [
    # requests is already in core dependencies
    # Note: Ollama itself must be installed separately
]
all-providers = [
    # Includes all optional providers (huggingface, ollama)
    # Default providers (openai, gemini) are already included
]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
